cluster/k3d-local/apps/traefik/traefik-plugins.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: generic-geoblock
    namespace: traefik
spec:
    plugin:
        GeoBlock:
            allowLocalRequests: "false"
            allowUnknownCountries: "false"
            api: https://get.geojs.io/v1/ip/country/{ip}
            apiTimeoutMs: "150"
            cacheSize: "15"
            countries: UK,US
            forceMonthlyUpdate: "true"
            logAllowedRequests: "false"
            logApiRequests: "true"
            logLocalRequests: "false"
            unknownCountryApiResponse: nil

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-ratelimit
  namespace: traefik
spec:
  rateLimit:
    period: 1m
    average: 6
