cluster/k3d-local/apps/traefik/whoami-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
